--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
       "@/api/*": ["./src/api/*"],
       "@/utils/*": ["./src/utils/*"],
       "@/assets/*": ["./src/assets/*"],
-      "@/store/*": ["./src/store/*"]
+      "@/store/*": ["src/stores/*"]
     }
   }
 }
